@@ -13,6 +13,7 @@
   * New :read_only option for FormPanel - makes all fields read-only and removes the "Apply" button.
   * FormPanel implements DSL shortcuts for the following options in default config: :model, :items, :record_id.
   * GridPanel implements DSL shortcuts for the following options in default config: :model, :add_form_config, :edit_form_config, :multi_edit_form_config.
+  * New FormPanel option :multi_edit - set when the form is used for editing multiple records at a time
 
 * API changes
   * Skip supporting ModelExtensions. The preferred way is using setters and getters on columns/fields.
